--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
-    "stripe": "^8.127.0"
+    "stripe": "^8.127.0",
+    "dotenv": "^6.2.0"
   },
   "devDependencies": {
     "dotenv": "^6.2.0"
